--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,6 +1,6 @@
 .header-top {
   display: flex;
-  padding: 20px;
+  padding: 60px;
   justify-content: center;
 }
 .header-top .title {
@@ -33,6 +33,32 @@
   height: 50%;
   display: flex;
   align-items: center;
+}
+
+.header-menu {
+  height: 60px;
+  display: flex;
+  border: 1px solid #cbcbcb;
+}
+.header-menu .category__title {
+  height: 60px;
+  padding: 10px;
+}
+.header-menu .top-menu {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.header-menu .top-menu .top-menu__item {
+  padding: 0 20px;
+  line-height: 60px;
+}
+
+.gubun-bar {
+  width: 1px;
+  height: 60px;
+  background: #cbcbcb;
+  margin: 0px 10px;
 }
 
 /*# sourceMappingURL=app.css.map */
