add. font-awesome

--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -49,6 +49,9 @@
     .category__title {
         height: 60px;
         padding: 10px;
+        .fas {
+            margin-right: 8px;
+        }
 
     }
     .top-menu {
