--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -1,4 +1,7 @@
 $button-padding: 20px;
+%border-basic {
+    border: 1px solid #e4e2e2;
+}
 
 .header-top {
     display: flex;
@@ -47,29 +50,36 @@ $button-padding: 20px;
     height: 60px;
     display: flex;
     border: 1px solid #cbcbcb;
+    max-width: 1270px;
+    margin: 0px auto;
 
     .category__title {
         height: 60px;
         padding: 10px;
+
         .fas {
             margin-right: 8px;
         }
 
     }
+
     .top-menu {
-        display:flex;
+        display: flex;
         align-items: center;
         padding: 10px;
-        .top-menu__btn{
-            padding:0 $button-padding;
+
+        .top-menu__btn {
+            padding: 0 $button-padding;
             line-height: 60px;
         }
     }
-    .private-menu{
+
+    .private-menu {
         margin-left: auto;
         display: flex;
+
         .private-menu__btn {
-            padding: $button-padding; 
+            padding: $button-padding;
         }
     }
 }
@@ -79,4 +89,66 @@ $button-padding: 20px;
     height: 60px;
     background: #cbcbcb;
     margin: 0px 20px;
+}
+
+.container {
+    margin: auto;
+    background-color: #f5f5f5;
+    padding-top: 25px;
+
+    .promotion {
+        width: 1270px;
+        margin: auto;
+        background: #fff;
+        @extend %border-basic;
+
+        .banner {
+            display: flex;
+            justify-content: center;
+
+            .best {
+                float: left;
+                width: 510px;
+
+                .best__link {
+                    display: block;
+                    margin: 0 auto;
+                }
+            }
+
+            .planning {
+                width: 790px;
+
+                .planning__link {
+                    display: block;
+                    margin: 0 auto;
+                    width: 600px;
+
+                }
+            }
+        }
+
+        img {
+            margin: auto;
+            text-align: center;
+            display: flex;
+        }
+    }
+    .theme {
+        .theme-container {
+            display: flex;
+        }
+        .theme-item {
+            width: 25%;
+            padding:0 60px; 
+        }
+        .theme__link {
+            display: block;
+            strong, span {
+                display: block;
+                padding: 5px;
+                font-size: 0.875rem;
+            }
+        }
+    }
 }
