--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,7 @@
+.container .promotion {
+  border: 1px solid #e4e2e2;
+}
+
 .header-top {
   display: flex;
   padding: 60px;
@@ -39,6 +43,8 @@
   height: 60px;
   display: flex;
   border: 1px solid #cbcbcb;
+  max-width: 1270px;
+  margin: 0px auto;
 }
 .header-menu .category__title {
   height: 60px;
@@ -69,6 +75,57 @@
   height: 60px;
   background: #cbcbcb;
   margin: 0px 20px;
+}
+
+.container {
+  margin: auto;
+  background-color: #f5f5f5;
+  padding-top: 25px;
+}
+.container .promotion {
+  width: 1270px;
+  margin: auto;
+  background: #fff;
+}
+.container .promotion .banner {
+  display: flex;
+  justify-content: center;
+}
+.container .promotion .banner .best {
+  float: left;
+  width: 510px;
+}
+.container .promotion .banner .best .best__link {
+  display: block;
+  margin: 0 auto;
+}
+.container .promotion .banner .planning {
+  width: 790px;
+}
+.container .promotion .banner .planning .planning__link {
+  display: block;
+  margin: 0 auto;
+  width: 600px;
+}
+.container .promotion img {
+  margin: auto;
+  text-align: center;
+  display: flex;
+}
+.container .theme .theme-container {
+  display: flex;
+}
+.container .theme .theme-item {
+  width: 25%;
+  padding: 0 60px;
+}
+.container .theme .theme__link {
+  display: block;
+}
+.container .theme .theme__link strong, .container .theme .theme__link span {
+  display: block;
+  padding: 5px;
+  font-size: 0.875rem;
 }
 
 /*# sourceMappingURL=app.css.map */
