--- a/app/sass/_global.scss
+++ b/app/sass/_global.scss
@@ -1,6 +1,6 @@
 * {
     font-family: 돋움,dotum,sans-serif;
-    outline:1px solid gray;
+    //outline:1px solid gray; //for debugging
   }
 
 body {
@@ -12,6 +12,7 @@ h1 {
 }
 
 $primaryColor: #eeffcc;
+$bgColor : #f5f5f5;
 
 $button-padding: 20px;
 %border-basic {
@@ -26,5 +27,11 @@ $button-padding: 20px;
 
 %card {
   width:25%;
-  padding: 0 60px;
+  padding: 20px 60px;
+}
+
+%text-block {
+  display: block;
+  padding: 5px;
+  font-size: 0.875rem;
 }
