add rolling text

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
         display: flex;
         position: relative;
         border: 1px solid gray;
+        align-items: center;
 
         form {
             display: flex;
