--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -11,6 +11,10 @@ h1 {
   font-size: 2rem;
 }
 
+button {
+  cursor: pointer;
+}
+
 $primaryColor: #eeffcc;
 $bgColor: #f5f5f5;
 
@@ -34,4 +38,23 @@ $button-padding: 20px;
   display: block;
   padding: 5px;
   font-size: 0.875rem;
+}
+
+.screen_out {
+  font-size: 0;
+  line-height: 0;
+}
+.txt_bar {
+  width: 1px;
+  height: 18px;
+  margin-top: 18px;
+  background-color: #e3e3e3;
+}
+.txt_new {
+  position: absolute;
+  top: 17px;
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  background-color: #f9624c;
 }
