add event to do not show roller text if input text was focused

--- a/src/scss/rolling_text.module.scss
+++ b/src/scss/rolling_text.module.scss
@@ -1,9 +1,11 @@
+@use "search-bar-common.module" as search-bar;
+
 $height: 40px;
 
 .component {
   height: $height;
   position: absolute;
-  left: 10px;
+  left: search-bar.$search-bar-left-margin;
   display: flex;
   align-items: center;
   overflow: hidden;
