--- a/src/scss/input_with_top_rankng_goods.module.scss
+++ b/src/scss/input_with_top_rankng_goods.module.scss
@@ -1,16 +1,22 @@
+@use 'search-bar-common.module' as search-bar;
+
 .component {
   display: flex;
   position: relative;
-  border: 1px solid gray;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   align-items: center;
+  border-radius: 10px;
   
   form {
     display: flex;
+    align-items: center;
+    height: 100%;
     
     .search-input {
       width: 400px;
-      height: 60px;
-      padding: 10px;
+      height: 100%;
+      font-size: 1.4rem;
+      padding-left: search-bar.$search-bar-left-margin;
     }
     
     .search-icon {
