feat: scss 파일 설정
프로젝트 예시로 주어진 파일과 같은 파일입니다.

--- a/src/public/sass/libs/reset.scss
+++ b/src/public/sass/libs/reset.scss
@@ -1,12 +1,4 @@
-/*https://elad2412.github.io/the-new-css-reset/*/
-
-/*** The new CSS Reset - version 1.4.2 (last updated 30.11.2021) ***/
-
-/*
-    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
-    - The "symbol *" part is to solve Firefox SVG sprite bug
- */
- *:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
+*:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
     all: unset;
     display: revert;
 }
@@ -19,7 +11,9 @@
 }
 
 /* Remove list styles (bullets/numbers) */
-ol, ul, menu {
+ol,
+ul,
+menu {
     list-style: none;
 }
 
@@ -40,7 +34,7 @@ textarea {
 
 /* revert for bug in Chromium browsers
    - fix for the content editable attribute will work properly. */
-:where([contenteditable]){
+:where([contenteditable]) {
     -moz-user-modify: read-write;
     -webkit-user-modify: read-write;
     overflow-wrap: break-word;
