--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -161,153 +161,89 @@
   }
 }
 
-.header-menu {
-  height: 60px;
-  display: flex;
-  border: 1px solid #cbcbcb;
-  max-width: 1270px;
-  margin: 0px auto;
-
-  .category__title {
-    height: 60px;
-    padding: 10px;
-
-    .fas {
-      margin-right: 8px;
-    }
-  }
-
-  .top-menu {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-
-    .top-menu__btn {
-      padding: 0 $button-padding;
-      line-height: 60px;
-    }
-  }
-
-  .private-menu {
-    margin-left: auto;
-    display: flex;
-
-    .private-menu__btn {
-      padding: $button-padding;
-    }
-  }
+#kakaoMain {
+  width: 1276px;
+  margin: 0 auto;
+  padding: 19px 0 40px;
 }
-
-.gubun-bar {
-  width: 1px;
-  height: 60px;
-  background: #cbcbcb;
-  margin: 0px 20px;
-}
-
-.container {
-  margin: auto;
-  background-color: #f5f5f5;
-  padding-top: 25px;
-
-  .promotion {
-    @extend %section-layout;
-    @extend %border-basic;
-
-    .banner {
-      display: flex;
-      justify-content: center;
-
-      .best {
-        float: left;
-        width: 510px;
-
-        .best__link {
-          display: block;
-          margin: 0 auto;
-        }
-      }
-
-      .planning {
-        width: 790px;
-
-        .planning__link {
-          display: block;
-          margin: 0 auto;
-          width: 600px;
-        }
+.section_top {
+  border: 1px solid #e4e4e4;
+  border-bottom: 0 none;
+  width: 1274px;
+  .cont_event {
+    width: 100%;
+    border-bottom: 1px solid #f1f1f1;
+    background-color: #fff;
+    display: flex;
+    .evt_item {
+      width: 510px;
+      height: 340px;
+      a {
+        display: block;
+        width: 484px;
+        margin: 0 auto;
       }
     }
-
-    img {
-      margin: auto;
-      text-align: center;
-      display: flex;
-    }
-  }
-  .theme {
-    .theme-container {
-      display: flex;
-    }
-    .theme-item {
-      @extend %card;
-      border: 1px solid #f1f1f1;
-    }
-    .theme__link {
-      display: block;
-      strong,
-      span {
-        @extend %text-block;
-      }
-      .theme-item__title {
-        font-weight: bold;
-      }
-      .theme-item__desc {
-        padding-top: 0;
-      }
-      .theme-item__icon {
-        border: 0.5px solid #ff000069;
-        padding: 4px;
-        width: 35px;
-      }
-    }
-  }
-
-  .hot-deal {
-    @extend %section-layout;
-    margin-top: 60px;
-
-    .section-title {
-      font-size: 1.25rem;
-      padding-bottom: 20px;
-      background-color: $bgColor;
-    }
-    .hot-deal__title,
-    .hot-deal__detail-price {
-      @extend %text-block;
-    }
-
-    .hot-deal-list {
-      display: flex;
-      flex-wrap: wrap;
-      .hot-deal__item {
-        width: 20%;
-        padding: 20px;
-        border-right: 1px solid #f1f1f1;
-        border-bottom: 1px solid #f1f1f1;
-      }
-    }
-
-    .hot-deal__detail-price {
-      margin-top: 20px;
+    .evt_slide {
+      width: 763px;
+      height: 340px;
+      border-left: 1px solid #f1f1f1;
       position: relative;
-      .txt-price-percent {
+      .slide_evt {
+        width: 514px;
+        overflow: hidden;
+        position: relative;
+        margin: 0 auto;
+      }
+      .paging_comm {
         position: absolute;
-        right: 10px;
-        font-size: 1.1rem;
-        line-height: 1.1rem;
-        color: red;
+        top: 283px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        clear: both;
+        .inner_paging {
+          display: inline-block;
+          margin: 0 auto;
+          .btn_paging {
+            display: inline;
+            float: left;
+            width: 15px;
+            height: 15px;
+            margin-left: 3px;
+            padding: 5px 0;
+            .num_page {
+              display: block;
+              width: 15px;
+              height: 5px;
+              background-color: #ccc;
+            }
+            .select {
+              background-color: #000;
+            }
+          }
+        }
+        .btn_slide {
+          position: absolute;
+          top: -160px;
+          width: 63px;
+          height: 85px;
+        }
+        .btn_prev {
+          left: 44px;
+          &:hover .ico_prev {
+            background-position: -60px 0;
+          }
+        }
+        .btn_next {
+          right: 44px;
+          &:hover .ico_next {
+            background-position: -90px 0;
+          }
+        }
       }
     }
+  }
+  .cont_item {
   }
 }
