--- a/src/styles/icon.css
+++ b/src/styles/icon.css
@@ -45,4 +45,20 @@
   background-position: -60px -60px;
 }
 
+.ico_slide {
+  width: 23px;
+  height: 45px;
+  display: inline-block;
+  background: url("../../assets/images/img_home_190702.png");
+}
+
+.ico_prev {
+  left: 160px;
+}
+
+.ico_next {
+  right: 160px;
+  background-position: -30px 0;
+}
+
 /*# sourceMappingURL=icon.css.map */
