--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -2,6 +2,11 @@
     font-family: 돋움,dotum,sans-serif;
     //outline:1px solid gray; //for debugging
   }
+  
+$primaryColor: #eeffcc;
+$bgColor : #f5f5f5;
+$weakGreyColor: #aaa;
+$strongGreyColor: #888;
 
 body {
   margin: 0px auto;
@@ -11,8 +16,6 @@ h1 {
   font-size: 2rem;
 }
 
-$primaryColor: #eeffcc;
-$bgColor : #f5f5f5;
 
 $button-padding: 20px;
 %border-basic {
@@ -26,8 +29,10 @@ $button-padding: 20px;
 }
 
 %card {
-  width:25%;
-  padding: 20px 60px;
+  min-width: 0;
+  flex-grow: 1;
+  flex-basis: 0;
+  padding: 20px;
 }
 
 %text-block {
