--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -57,7 +57,6 @@
         .fas {
             margin-right: 8px;
         }
-
     }
 
     .top-menu {
@@ -77,6 +76,63 @@
 
         .private-menu__btn {
             padding: $button-padding;
+            position: relative;
+
+            .recent-items-container {
+                position: absolute;
+                top: 100%;
+                right: 0;
+                width: 442px;
+                height: 500px;
+                background-color: #fff;
+                border: 1px solid $weakGreyColor;
+                padding: 10px;
+
+                &__hidden {
+                    display: none;
+                }
+
+                &__container {
+                    display: none;
+                    justify-content: flex-start;
+                    flex-wrap: wrap;
+                    &-active {
+                        display: flex;
+                    }
+                }
+
+                &__tab-container {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-around;
+                    padding-bottom: 10px;
+                }
+
+                &__tab {
+                    width: fit-content;
+                    font-weight: bold;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: $strongGreyColor;
+                    border-bottom: 2px solid #0000;
+                    cursor: pointer;
+                }
+
+                &__tab-active {
+                    color: black;
+                    border-color: black;
+                }
+
+                .recent-item {
+                    margin-right: 5px;
+                    
+                    & > img {
+                        width: 100px;
+                        height: 100px;
+                    }
+                }
+            }
         }
     }
 }
@@ -118,7 +174,6 @@
                     display: block;
                     margin: 0 auto;
                     width: 600px;
-
                 }
             }
         }
@@ -132,6 +187,7 @@
     .theme {
         .theme-container {
             display: flex;
+            justify-content: center;
         }
         .theme-item {
             @extend %card;
@@ -139,42 +195,59 @@
         }
         .theme__link {
             display: block;
-            strong, span {
+            cursor: pointer;
+            strong,
+            span {
                 @extend %text-block;
             }
             .theme-item__title {
                 font-weight: bold;
             }
             .theme-item__desc {
-                padding-top:0;
+                padding-top: 0;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
-            .theme-item__icon {
-                border:0.5px solid #ff000069;
-                padding:4px;
-                width: 35px;
+        }
+        .theme-item__icon {
+            width: 24px;
+            height: 24px;
+            cursor: pointer;
+            & > img {
+                width: 24px;
+            }
+        }
+        .theme__link:hover {
+            .theme-item__info > img {
+                opacity: 0.75;
+            }
+            .theme-item__title {
+                text-decoration: underline;
             }
         }
     }
 
     .hot-deal {
         @extend %section-layout;
-        margin-top:60px;
+        margin-top: 60px;
 
         .section-title {
             font-size: 1.25rem;
             padding-bottom: 20px;
             background-color: $bgColor;
         }
-        .hot-deal__title, .hot-deal__detail-price{
+        .hot-deal__title,
+        .hot-deal__detail-price {
             @extend %text-block;
         }
 
         .hot-deal-list {
             display: flex;
-            flex-wrap:wrap;
+            flex-wrap: wrap;
             .hot-deal__item {
-                width:20%;
-                padding:20px;
+                width: 20%;
+                padding: 20px;
                 border-right: 1px solid #f1f1f1;
                 border-bottom: 1px solid #f1f1f1;
             }
