--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -66,7 +66,13 @@ h1 {
   font-size: 1.2rem;
   height: 50%;
   display: flex;
+  overflow: hidden;
+  flex-direction: column;
   align-items: center;
+}
+.header-top .search .search-top10 .search-top10__item {
+  width: 100%;
+  height: 100%;
 }
 
 .header-menu {
