--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,8 +38,12 @@
       left: 10px;
       font-size: 1.2rem;
       height: 50%;
-      display: flex;
-      align-items: center;
+      overflow: hidden;
+      .search-top10__item {
+        display: flex;
+        align-items: center;
+        padding: 6px;
+      }
     }
   }
 }
