--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "global";
 
 .header-top {
@@ -15,6 +16,7 @@
         display: flex;
         position: relative;
         border: 1px solid gray;
+        overflow: hidden;
 
         form {
             display: flex;
@@ -22,7 +24,9 @@
             .search__input {
                 width: 400px;
                 height: 60px;
-                padding: 10px;
+                padding-left: 20px;
+                line-height: 60px;
+                font-size: 1.2rem;
             }
 
             .search__icon {
@@ -31,14 +35,19 @@
             }
         }
 
-        .search-top10 {
+        .search-top {
             position: absolute;
-            transform: translateY(50%);
-            left: 10px;
+            top: 5px;
+            transition: transform 1s;
+            left: 20px;
+            line-height: 60px;
             font-size: 1.2rem;
             height: 50%;
             display: flex;
-            align-items: center;
+            flex-direction: column;
+            align-items: start;
+            color: grey;
+
         }
     }
 }
