--- a/packages/web/src/sass/icon.scss
+++ b/packages/web/src/sass/icon.scss
@@ -56,3 +56,13 @@
   right: 160px;
   background-position: -30px 0;
 }
+.ico_comm2 {
+  background: url("../../assets/images/ico_comm2.gif");
+  float: left;
+  height: 18px;
+  margin: 11px 4px 0 0;
+}
+.ico_theme {
+  width: 31px;
+  background-position: 0 -850px;
+}
