--- a/packages/web/src/styles/icon.css
+++ b/packages/web/src/styles/icon.css
@@ -61,4 +61,16 @@
   background-position: -30px 0;
 }
 
+.ico_comm2 {
+  background: url("../../assets/images/ico_comm2.gif");
+  float: left;
+  height: 18px;
+  margin: 11px 4px 0 0;
+}
+
+.ico_theme {
+  width: 31px;
+  background-position: 0 -850px;
+}
+
 /*# sourceMappingURL=icon.css.map */
