--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,72 +1,103 @@
 @import "global";
 
-.header-top {
+.header {
+  background-color: white;
+}
+
+.header__top {
   display: flex;
-  padding: 60px;
+  padding: 4rem 0px 3rem 0px;
   justify-content: center;
 
-  .title {
+  .logo {
     display: flex;
     align-items: center;
     margin-right: 50px;
+    img {
+      width: 119px;
+      height: auto;
+    }
   }
 
   .search {
     display: flex;
     position: relative;
-    border: 1px solid gray;
+    width: 670px;
+    @extend %border-basic;
+    border-radius: 8px;
 
     form {
       display: flex;
+      width: 100%;
+      padding: 1rem 1rem 0.75rem 2rem;
 
       .search__input {
-        width: 400px;
-        height: 60px;
-        padding: 10px;
+        width: 100%;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22px;
       }
 
       .search__icon {
+        cursor: pointer;
         font-size: 1.4rem;
-        padding: 10px;
+        user-select: none;
       }
     }
 
-    .search-top10 {
+    .search__top10 {
       position: absolute;
       transform: translateY(50%);
-      left: 10px;
+      left: 2rem;
       font-size: 1.2rem;
       height: 50%;
       display: flex;
       align-items: center;
+      font-weight: 700;
+      color: #939393;
+      pointer-events: none;
     }
   }
 }
 
-.header-menu {
+.header__nav {
   height: 60px;
-  display: flex;
-  border: 1px solid #cbcbcb;
-  max-width: 1270px;
+  border-top: 1px solid #efefef;
+  box-shadow: 0 1px rgb(0 0 0 / 16%);
+}
+
+.header__navContent {
+  width: 1270px;
   margin: 0px auto;
+  @extend %flex;
 
-  .category__title {
-    height: 60px;
-    padding: 10px;
+  .category {
+    cursor: pointer;
 
-    .fas {
-      margin-right: 8px;
+    .category__title {
+      height: 60px;
+      padding: 10px;
+      .fas {
+        margin-right: 8px;
+      }
     }
   }
 
-  .top-menu {
-    display: flex;
-    align-items: center;
-    padding: 10px;
+  .topMenu {
+    @extend %flex;
 
-    .top-menu__btn {
-      padding: 0 $button-padding;
-      line-height: 60px;
+    .topMenu__btn {
+      cursor: pointer;
+      padding: 0 $btn-padding;
+      font-weight: 700;
+
+      :hover {
+        color: $red-500;
+      }
+
+      a {
+        transition: color 200ms ease-out;
+      }
     }
   }
 
@@ -75,14 +106,14 @@
     display: flex;
 
     .private-menu__btn {
-      padding: $button-padding;
+      padding: $btn-padding;
     }
   }
 }
 
-.gubun-bar {
+.separator {
   width: 1px;
-  height: 60px;
-  background: #cbcbcb;
+  height: 18px;
+  background: #e3e3e3;
   margin: 0px 20px;
 }
